-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.122 2007-10-09 00:23:52 remko Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2007-10-09
	* tar 4.2.1 made and released via email
-----------------------------------------------------------------------------------------

2007-10-09	remko
	* install-sh:		Replaced version from 1991 with one from 2004 that can install
				multiple files at a time.

2007-10-07	remko
	* nc2xy.c:		Added missing -f option
	* configure.in:		No more "test ! "$A" = "B"", but use test "X$A" != "XB"
				Removed --wrapbindir and --wrapmandir (were not used anywhere)

2007-10-07	pwessel
	* gmt_support.c:	Removed memory leak in GMT_delaunay
	
2007-10-05	pwessel
	* grdcontour.c:		Only extend subset by 1 row/col if pixel-registered
	* grdvolume.c:		Added missing -f option
	
2007-10-04	pwessel
	* psscale.c:		Did not work if -Q and -B1p were used together
	* psbasemap.txt:	Point out that -E disables plotting of titles

2007-10-04	remko
	* gmt_map.c (GMT_map_setup):	Removed restriction that east and west limits can not be
				both negative. This fixed the remaining Hexagone problem.

2007-10-03	remko
	* makegmt.macros.in, */makefile:	Found robust way of assigning .exe extension
				to Cygwin programs
	* configure.in, makegmt.macros.in:	Shared library extensions for IRIX and HP
				are .so and .sl and not the other way around.

2007-10-01	pwessel
	* surface.c:		Make sure verbose starts with surface:
	* gmt_plot.c:		Oblique tickmarks sometimes were missing for latitudes
	
2007-10-01	remko
	* gmt_support.c (GMT_sample_cpt):	Needed to reverse z_low and z_high values as well as
				rgb values when reversing color maps.
	* makecpt.c:		Need to reverse colormap intervals when -I is given.
				Both these fixes were needed to properly reverse colormaps with uneven